# restate-pydantic

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  enriched_leads.json  leads.json  priority_1_results.json  pyproject.toml  register.sh  scored_leads.json  start.sh  structured_leads.json  test_queries.py  test_weather.py  top_queries.json
app/: chaining.py  chaining_typed.py  lead_generator.py  main.py  message.py  search.py  weather.py  weather_advanced.py
app/data/: example_prompt.py
app/restate/: __init__.py  _agent.py  _model.py  _serde.py  _toolset.py
app/schemas/: lead_generator.py
app/system_prompts/: lead_generator.py
app/util/: llm_call.py
responses/: leads.json  location.json  priority_1_results.json  scored_leads.json  search_results.json  search_results_organized.json  structured_leads.json
scripts/: test_queries.py  test_search.py  test_weather.py
